<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splash_main_bck"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bck">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_ln_tag_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bck_sign_in_buttons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_ln_tag_line">

            <TextView
                android:id="@+id/btn_create_acc"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/dimen_10_dp"
                android:gravity="center"
                android:padding="@dimen/dimen_10_dp"
                android:text="@string/btn_create_acc"
                android:textAlignment="center"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/text_size_12_sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/btn_sign_in"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/dimen_20_dp"
                android:background="@drawable/round_edge_btn_bck"
                android:gravity="center"
                android:text="@string/btn_sign_in"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_12_sp"
                app:layout_constraintBottom_toTopOf="@id/btn_create_acc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/bck_white_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/curve_edge_bck"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/guide_ln_tag_line"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bck_main_log_in"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_20_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_ln_tag_line">

            <TextView
                android:id="@+id/lbl_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_welcome_back"
                android:textStyle="bold"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/text_size_25_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbl_login_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_login_acc"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/text_size_12_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_welcome" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_login_id"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dimen_10_dp"
                android:background="@drawable/round_edge_btn_bck"
                android:drawableStart="@drawable/ic_username"
                android:gravity="center"
                android:textColorHint="@color/hint_text_color"
                android:hint="@string/hint_name"
                android:inputType="text|textNoSuggestions"
                android:padding="@dimen/dimen_10_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_login_acc"
                app:layout_constraintWidth_percent="0.9" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dimen_10_dp"
                android:background="@drawable/round_edge_btn_bck"
                android:drawableStart="@drawable/ic_mail"
                android:gravity="center"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:textColorHint="@color/hint_text_color"
                android:padding="@dimen/dimen_10_dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_login_id"
                app:layout_constraintWidth_percent="0.9" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dimen_10_dp"
                android:background="@drawable/round_edge_btn_bck"
                android:drawableStart="@drawable/ic_password"
                android:drawableEnd="@drawable/ic_hide"
                android:gravity="center"
                android:textColorHint="@color/hint_text_color"
                android:hint="@string/hint_password"
                android:inputType="textPassword|textNoSuggestions"
                android:padding="@dimen/dimen_10_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_email"
                app:layout_constraintWidth_percent="0.9" />

            <CheckBox
                android:id="@+id/ck_box_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_text_color"
                android:text="@string/lbl_remember_me"
                app:layout_constraintStart_toStartOf="@id/edt_password"
                app:layout_constraintTop_toBottomOf="@id/edt_password" />

            <TextView
                android:id="@+id/btn_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_text_color"
                android:layout_marginTop="@dimen/dimen_10_dp"
                android:text="@string/btn_forgot_pas"
                app:layout_constraintEnd_toEndOf="@id/edt_password"
                app:layout_constraintTop_toBottomOf="@id/edt_password" />

            <TextView
                android:id="@+id/lbl_no_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_20_dp"
                android:text="@string/lbl_no_acc"
                android:textColor="@color/hint_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5_dp"
                android:layout_marginBottom="@dimen/dimen_20_dp"
                android:text="@string/btn_sign_up"
                android:textStyle="italic"
                android:textColor="@color/text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/lbl_no_acc" />

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/round_edge_btn_grn_bck"
                android:gravity="center"
                android:text="@string/btn_login"
                android:textColor="@color/hint_text_color"
                android:layout_marginBottom="@dimen/dimen_10_dp"
                app:layout_constraintBottom_toTopOf="@id/lbl_no_acc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.09"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.9" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>