<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bck"
    >
<TextView
    android:id="@+id/lbl_title"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:text="@string/lbl_add"
    android:textSize="@dimen/text_size_25_sp"
    android:textColor="@color/black"
    android:padding="@dimen/dimen_10_dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintHeight_percent="0.1"
    android:gravity="center"
    />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_productName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/hint_productName"
        android:padding="@dimen/dimen_10_dp"
        android:textColorHint="@color/color_blue"
        android:drawablePadding="@dimen/dimen_10_dp"
        android:inputType="text|textNoSuggestions"
        android:drawableStart="@drawable/ic_device"
        android:layout_margin="@dimen/dimen_10_dp"
        app:layout_constraintTop_toBottomOf="@id/lbl_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/color_blue"
        android:background="@drawable/round_edge_btn_bck"
        app:layout_constraintHeight_percent="0.07"
        />

    <Spinner
        android:id="@+id/et_productType"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColorHint="@color/color_blue"
        android:drawablePadding="@dimen/dimen_10_dp"
        android:padding="@dimen/dimen_10_dp"
        android:hint="@string/hint_productTyype"
        android:drawableStart="@drawable/ic_folder"
        android:layout_margin="@dimen/dimen_10_dp"
        android:backgroundTint="@color/color_blue"
        app:layout_constraintTop_toBottomOf="@id/et_productName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/round_edge_btn_bck"
        app:layout_constraintHeight_percent="0.07"
        />

    <Spinner
        android:id="@+id/et_product_calendar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColorHint="@color/color_blue"
        android:padding="@dimen/dimen_10_dp"
        android:drawablePadding="@dimen/dimen_10_dp"
        android:drawableStart="@drawable/ic_calendar"
        android:layout_margin="@dimen/dimen_10_dp"
        app:layout_constraintTop_toBottomOf="@id/et_productType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/color_blue"
        android:background="@drawable/round_edge_btn_bck"
        app:layout_constraintHeight_percent="0.07"
        />

    <TextView
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.06"
        android:text="@string/btn_save"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="@dimen/dimen_10_dp"
        android:background="@drawable/round_edge_button_blue_bck"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>